@@ -26,10 +26,12 @@ pipeline {
         }
 
         stage('unit tests') {
-            steps {
-                sh 'mvn test'
-            }
-        }
+    steps {
+        sh '''
+            mvn test -DargLine="--add-opens=java.base/java.lang=ALL-UNNAMED"
+        '''
+    }
+}
 
         stage('SonarQube analysis') {
             steps {
